@@ -86,14 +86,14 @@ kdumpfile_new (PyTypeObject *type, PyObject *args, PyObject *kw)
 	if (!self)
 		return NULL;
 
-	self->ctx = kdump_alloc_ctx();
+	self->ctx = kdump_alloc();
 	if (!self->ctx) {
 		PyErr_SetString(PyExc_MemoryError,
 				"Couldn't allocate kdump context");
 		goto fail;
 	}
 
-	status = kdump_init_ctx(self->ctx);
+	status = kdump_init(self->ctx);
 	if (status != kdump_ok) {
 		PyErr_Format(SysErrException,
 			     "Couldn't initialize kdump context: %s",
