@@ -110,7 +110,7 @@ dump_data_fd(int fd, unsigned long long addr, unsigned long long len)
 	kdump_status res;
 	int rc;
 
-	ctx = kdump_init();
+	ctx = kdump_new();
 	if (!ctx) {
 		perror("Cannot initialize dump context");
 		return TEST_ERR;
