@@ -46,7 +46,7 @@ main(int argc, char **argv)
 	kdump_status status;
 	int rc;
 
-	ctx = kdump_init();
+	ctx = kdump_new();
 	if (!ctx) {
 		perror("Cannot initialize dump context");
 		return TEST_ERR;
